# iikanji-kakeibo-client-tui

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: dependency-review.yml  docker.yml  release.yml  test.yml
docker/: entrypoint.sh
src/iikanji_tui/: __init__.py  api.py  app.py  auth.py  cli.py  config.py
src/iikanji_tui/screens/: ai_detail.py  ai_drafts.py  confirm.py  image_preview.py  journal_edit.py  journal_list.py  upload.py  vouchers.py
tests/: conftest.py  test_ai_drafts.py  test_api.py  test_app.py  test_auth.py  test_cli.py  test_config.py  test_image_preview.py  test_journal_crud_integration.py  test_journal_edit.py  test_journal_list.py  test_vouchers.py
