[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iikanji-tui"
version = "0.1.0"
description = "TUI client for iikanji-kakeibo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "nananek" },
]
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "tomli; python_version < '3.11'",
    "tomli-w>=1.0",
    "click>=8.0",
    "qrcode>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.10",
    "respx>=0.21",
]

[project.scripts]
iikanji-tui = "iikanji_tui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
