[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iikanji-tui"
version = "0.1.0"
description = "TUI client for iikanji-kakeibo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "nananek" },
]
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "tomli; python_version < '3.11'",
    "tomli-w>=1.0",
    "click>=8.0",
    "qrcode>=7.4",
    "textual-image>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.10",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
]

[project.scripts]
iikanji-tui = "iikanji_tui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line-length は本文ではゆるめに
    "E741",  # `l` を仕訳行 (line) の意味で使う
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["tests/", "build/", "dist/"]
